--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                               Men
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <li><a class="dropdown-item" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
+                              <li><a class="dropdown-item" href="#">Footwear</a></li>
+                              <li><a class="dropdown-item" href="#">Apparals</a></li>
                               <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
+                              <li><a class="dropdown-item" href="#">Accessories</a></li>
                             </ul>
                           </li>
                           <li class="nav-item dropdown">
@@ -38,10 +38,10 @@
                               Woomen
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <li><a class="dropdown-item" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
+                              <li><a class="dropdown-item" href="#">Footwear</a></li>
+                              <li><a class="dropdown-item" href="#">Apparals</a></li>
                               <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
+                              <li><a class="dropdown-item" href="#">Accessories</a></li>
                             </ul>
                           </li>
                       <li class="nav-item dropdown">
@@ -49,10 +49,10 @@
                           Lookbook
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><a class="dropdown-item" href="#">Footwear</a></li>
+                          <li><a class="dropdown-item" href="#">Apparals</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                          <li><a class="dropdown-item" href="#">Accessories</a></li>
                         </ul>
                       </li>
                       <li class="nav-item">
