--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <section class="jackets">
       <div class="container-fluid">
         <div class="row">
-          <img src="Images/b-jackets-1003-1.jpg" alt="">
+          <img class="p-0" src="Images/b-jackets-1003-1.jpg" alt="">
           <div class="col-md-6 subCol">
           </div>
           <div class="col-md-6 mt-5 subCol">
@@ -157,7 +157,7 @@
     <section class="treck-bag">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-6 jackets">
+          <div class="col-md-6 jackets p-0">
             <img src="Images/b-trekking-1004-1.jpg" alt="">
             <div class="col-md-6 subCol"></div>
             <div class="col-md-6 subCol">
@@ -166,7 +166,7 @@
               <button type="button" class="btn">Explore Now</button>
             </div>
           </div>
-          <div class="col-md-6 jackets">
+          <div class="col-md-6 jackets p-0">
             <img src="Images/b-bags-1004-2.jpg" alt="">
             <div class="col-md-6 subCol"></div>
             <div class="col-md-6 subCol">
@@ -181,7 +181,7 @@
     <section class="jackets">
       <div class="container-fluid">
         <div class="row">
-          <img src="Images/b-research-lab-1005-1.jpg" alt="">
+          <img class="p-0" src="Images/b-research-lab-1005-1.jpg" alt="">
           <div class="col-md-6 subCol">
           </div>
           <div class="col-md-6 mt-5 subCol">
@@ -195,7 +195,7 @@
     <section class="jackets">
       <div class="container-fluid">
         <div class="row">
-          <img src="Images/b-pro-1008-1.jpg" alt="">
+          <img class="p-0" src="Images/b-pro-1008-1.jpg" alt="">
           <div class="col-md-6 proPlanet subCol">
             <h2>Pro</h2>
             <h1>Planet</h1>
@@ -209,7 +209,7 @@
     <section class="jackets">
       <div class="container-fluid">
         <div class="row">
-          <img src="Images/b-lookbook-1006-3.jpg" alt="">
+          <img class="p-0" src="Images/b-lookbook-1006-3.jpg" alt="">
           <div class="col-md-6 subCol">
           </div>
           <div class="col-md-6 mt-5 subCol">
@@ -232,8 +232,8 @@
             <div class="col-md-6">
               <div class="row">
                 <div class="col-md-6">
-                  <h3 class="text-center">World Woodland</h3>
-                  <ul>
+                  <h3>World Woodland</h3>
+                  <ul class="p-0">
                     <li><a href="">About Us</a></li>
                     <li><a href="">Proplanet</a></li>
                     <li><a href="">Affiliates</a></li>
@@ -248,7 +248,7 @@
                 </div>
                 <div class="col-md-6">
                   <h3>Outdoor</h3>
-                  <ul>
+                  <ul class="p-0">
                     <li><a href="">Trekking poles</a></li>
                     <li><a href="">Bluetooth Devices</a></li>
                     <li><a href="">Umbrellas</a></li>
@@ -267,7 +267,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <h3>Men</h3>
-                  <ul>
+                  <ul class="p-0">
                     <li><a href="">Footwear</a></li>
                     <li><a href="">Apparels</a></li>
                     <li><a href="">Accessories</a></li>
@@ -275,7 +275,7 @@
                 </div>
                 <div class="col-md-6">
                   <h3>Women</h3>
-                  <ul>
+                  <ul class="p-0">
                     <li><a href="">Footwear</a></li>
                     <li><a href="">Apparels</a></li>
                     <li><a href="">Accessories</a></li>
@@ -290,7 +290,7 @@
             <hr>
             <div class="icons">
               <div class="row p-3">
-               <div class="col-md-6 fs-4" style="letter-spacing: 1rem;">
+               <div class="col-md-6 fs-4 " style="letter-spacing: 1rem;">
                   <i class="fa-brands fa-twitter"></i>
                   <i class="fa-brands fa-facebook-f"></i>
                   <i class="fa-brands fa-instagram"></i>
